--- a/WorkineThor/bin/workinethor/view/LoginView.fxml
+++ b/WorkineThor/bin/workinethor/view/LoginView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
@@ -11,7 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="workinethor.view.LoginViewController">
+<BorderPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="workinethor.view.LoginViewController">
    <center>
       <AnchorPane>
          <children>
@@ -40,7 +41,7 @@
                         <Font size="25.0" />
                      </font></Label>
                   <TextField fx:id="userName" prefHeight="37.0" prefWidth="312.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-                  <PasswordField fx:id="password" prefHeight="37.0" prefWidth="312.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+                  <PasswordField fx:id="password" prefHeight="38.0" prefWidth="313.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
                   <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="4">
                      <children>
                         <Button fx:id="loginBtn" alignment="CENTER" contentDisplay="CENTER" defaultButton="true" layoutX="86.0" layoutY="20.0" mnemonicParsing="false" text="Login" textAlignment="CENTER">
@@ -50,6 +51,16 @@
                         </Button>
                      </children>
                   </AnchorPane>
+                  <Label prefHeight="36.0" prefWidth="134.0" text="want to became a user?" GridPane.columnIndex="2" GridPane.rowIndex="5">
+                     <GridPane.margin>
+                        <Insets left="40.0" />
+                     </GridPane.margin>
+                  </Label>
+                  <Button alignment="CENTER_RIGHT" contentDisplay="RIGHT" mnemonicParsing="false" style="-fx-background-color: #b51c1c;" text="Signup" textFill="WHITE" GridPane.columnIndex="2" GridPane.rowIndex="5">
+                     <GridPane.margin>
+                        <Insets left="200.0" />
+                     </GridPane.margin>
+                  </Button>
                </children>
             </GridPane>
          </children>
