--- a/WorkineThor/src/workinethor/view/SignupView.fxml
+++ b/WorkineThor/src/workinethor/view/SignupView.fxml
@@ -8,8 +8,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="workinethor.view.SignupViewController">
    <center>
       <GridPane BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -31,9 +30,9 @@
          <children>
             <Label text="username" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <Label text="password" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <TextField GridPane.columnIndex="2" GridPane.rowIndex="2" />
-            <TextField GridPane.columnIndex="2" GridPane.rowIndex="3" />
-            <Button layoutX="70.0" layoutY="222.0" mnemonicParsing="false" text="Signup" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+            <TextField fx:id="username" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <TextField fx:id="password" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+            <Button fx:id="signupBtn" layoutX="70.0" layoutY="222.0" mnemonicParsing="false" text="Signup" GridPane.columnIndex="2" GridPane.rowIndex="4" />
             <Label text="WorkineThor" GridPane.columnIndex="2" />
          </children>
       </GridPane>
