--- a/WorkineThor/src/logic/workinethor/view/Login.fxml
+++ b/WorkineThor/src/logic/workinethor/view/Login.fxml
@@ -37,11 +37,11 @@
                      <font>
                         <Font size="25.0" />
                      </font></Label>
-                  <Label fx:id="Password" text="Password:" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                  <Label fx:id="passwordLabel" text="Password:" GridPane.columnIndex="1" GridPane.rowIndex="3">
                      <font>
                         <Font size="25.0" />
                      </font></Label>
-                  <TextField fx:id="userName" prefHeight="37.0" prefWidth="312.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                  <TextField fx:id="usernameTextField" prefHeight="37.0" prefWidth="312.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                   <PasswordField fx:id="password" prefHeight="38.0" prefWidth="313.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
                   <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="4">
                      <children>
