--- a/WorkineThor/src/logic/workinethor/view/DutiesOverview.fxml
+++ b/WorkineThor/src/logic/workinethor/view/DutiesOverview.fxml
@@ -13,13 +13,13 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<BorderPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="logic.workinethor.view.WatchDutiesView">
+<BorderPane fx:id="pane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="logic.workinethor.view.WatchDutiesView">
    <center>
-      <AnchorPane prefHeight="398.0" prefWidth="610.0">
+      <AnchorPane fx:id="anchor" prefHeight="398.0" prefWidth="610.0">
          <children>
             <SplitPane dividerPositions="0.32441471571906355" layoutX="5.0" prefHeight="398.0" prefWidth="600.0">
                <items>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="396.0" prefWidth="203.0">
+                  <AnchorPane fx:id="anchorPane" minHeight="0.0" minWidth="0.0" prefHeight="396.0" prefWidth="203.0">
                      <children>
                         <TableView fx:id="dutiesTable" layoutX="-6.0" prefHeight="396.0" prefWidth="199.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-6.0" AnchorPane.rightAnchor="-2.0" AnchorPane.topAnchor="0.0">
                            <columns>
@@ -32,9 +32,9 @@
                         </TableView>
                      </children>
                   </AnchorPane>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="338.0" prefWidth="363.0">
+                  <AnchorPane fx:id="ancore" minHeight="0.0" minWidth="0.0" prefHeight="338.0" prefWidth="363.0">
                      <children>
-                        <Label layoutX="5.0" layoutY="4.0" text="Duty Details" />
+                        <Label fx:id="details" layoutX="5.0" layoutY="4.0" text="Duty Details" />
                         <GridPane layoutY="25.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="25.0">
                            <columnConstraints>
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -46,9 +46,9 @@
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                            </rowConstraints>
                            <children>
-                              <Label text="Duty Name" />
-                              <Label text="Kinf of Duty" GridPane.rowIndex="1" />
-                              <Label text="State" GridPane.rowIndex="2" />
+                              <Label fx:id="dutyName" text="Duty Name" />
+                              <Label fx:id="kindOfDuty" text="Kinf of Duty" GridPane.rowIndex="1" />
+                              <Label fx:id="state" text="State" GridPane.rowIndex="2" />
                               <Label fx:id="dutyNameLabel" text="Label" GridPane.columnIndex="1" />
                               <Label fx:id="kindOfDutyLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                               <Label fx:id="stateLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
@@ -56,9 +56,9 @@
                         </GridPane>
                         <ButtonBar layoutX="90.0" layoutY="342.0" prefHeight="40.0" prefWidth="252.0" AnchorPane.rightAnchor="7.333333333333314">
                            <buttons>
-                              <Button mnemonicParsing="false" text="new" />
-                              <Button layoutX="50.0" layoutY="15.0" mnemonicParsing="false" text="delete" />
-                              <Button layoutX="135.0" layoutY="15.0" mnemonicParsing="false" text="edit" />
+                              <Button fx:id="newButton" mnemonicParsing="false" text="new" />
+                              <Button fx:id="delete" layoutX="50.0" layoutY="15.0" mnemonicParsing="false" text="delete" />
+                              <Button fx:id="edit" layoutX="135.0" layoutY="15.0" mnemonicParsing="false" text="edit" />
                            </buttons>
                         </ButtonBar>
                         <TableView layoutX="14.0" layoutY="132.0" prefHeight="200.0" prefWidth="172.0">
